--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    .sidebar{
+      background-color: rgb(84, 65, 65);
+    }
     [data-darkreader-inline-bgcolor] {
       background-color: var(--darkreader-inline-bgcolor) !important;
     }
