--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    .page-title, .post-title, .post-title a {
+      color: rgb(214, 212, 207);
+    }
     .sidebar{
       background-color: rgb(84, 65, 65);
     }
