--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    h1, h2, h3, h4, h5, h6 {
+      color: rgb(214, 211, 206);
+    }
     .page-title, .post-title, .post-title a {
       color: rgb(214, 212, 207);
     }
