--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,23 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    .gist {
+      background-color: rgb(29, 30, 35);
+    }
+    pre {
+      background-color: rgb(29, 30, 35);
+    }
+    code {
+      color: rgb(205, 131, 138);
+      background-color: rgb(25, 26, 30);
+    }
+    strong {
+      color: rgb(214, 212, 207);
+    }
+    blockquote {
+      color: rgb(187, 182, 175);
+      border-left-color: rgb(56, 56, 56);
+    }
     h1, h2, h3, h4, h5, h6 {
       color: rgb(214, 211, 206);
     }
