--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,15 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    hr {
+      border-right-color: initial;
+      border-left-color: initial;
+      border-top-color: rgb(54, 54, 54);
+      border-bottom-color: rgb(51, 51, 51);
+    }
+    tbody tr:nth-child(2n+1) td, tbody tr:nth-child(2n+1) th {
+      background-color: rgb(25, 26, 30);
+    }
     .gist {
       background-color: rgb(29, 30, 35);
     }
