--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    abbr[title] {
+      border-bottom-color: rgb(56, 56, 56);
+    }
     hr {
       border-right-color: initial;
       border-left-color: initial;
