--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,15 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    .gist {
+      background-color: rgb(29, 30, 35);
+    }
+    .gist .gist-file {
+      border-top-color: rgb(58, 58, 58);
+      border-right-color: rgb(58, 58, 58);
+      border-bottom-color: rgb(61, 61, 61);
+      border-left-color: rgb(58, 58, 58);
+    }
     abbr[title] {
       border-bottom-color: rgb(56, 56, 56);
     }
