--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   <style>
+    .message {
+      color: rgb(190, 185, 179);
+      background-color: rgb(29, 30, 35);
+    }
     .gist {
       background-color: rgb(29, 30, 35);
     }
