--- a/_includes/head.html
+++ b/_includes/head.html
@@ -166,4 +166,9 @@
     ga('create', 'UA-146052-15', 'getpoole.com');
     ga('send', 'pageview');
   </script>
+  <script>
+    function newDoc() {
+      window.history.back();
+    }
+    </script>
 </head>
