--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" onClick="newDoc()">Ankit Khare - Home</a>
+      <!---<a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" onClick="newDoc()">Ankit Khare - Home</a>-->
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Blog Home</a>
 
       {% comment %}
